scrollbar issue for item ad

--- a/src/assets/css/_common.scss
+++ b/src/assets/css/_common.scss
@@ -272,6 +272,7 @@ body{
             }
             .opti_vertical-tabcontent {
                 width: calc(100% - 60px);
+                height: calc(100vh - 155px);
             }
         // vertical tab end
         
